Feature/add find portal page by id
